ocp-bundle/api-gateway-deployment-bundle.yaml
apiVersion: v1
kind: List
items:
- apiVersion: v1
  kind: Service
  metadata:
    labels:
      app: api-gateway
    name: api-gateway
    namespace: microservices
  spec:
    ports:    
    - port: 10000
      protocol: TCP
      targetPort: 10000
    selector:
      app: api-gateway
      deploymentconfig: api-gateway
    type: LoadBalancer
- apiVersion: route.openshift.io/v1
  kind: Route
  metadata:
    labels:
      app: api-gateway
    name: api-gateway
    namespace: microservices
  spec:
    to:
      kind: Service
      name: api-gateway
      weight: 100
- apiVersion: apps.openshift.io/v1
  kind: DeploymentConfig
  metadata:
    labels:
      app: api-gateway
    name: api-gateway
    namespace: microservices
  spec:
    replicas: 1
    selector:
      app: api-gateway
      deploymentconfig: api-gateway
    strategy:
      activeDeadlineSeconds: 21600
      rollingParams:
        intervalSeconds: 1
        maxSurge: 25%
        maxUnavailable: 25%
        timeoutSeconds: 600
        updatePeriodSeconds: 1
      type: Rolling
    template:
      metadata:
        labels:
          app: api-gateway
          deploymentconfig: api-gateway
      spec:
        containers:
        - image: 172.30.1.1:5000/microservices/api-gateway
          imagePullPolicy: Always
          name: api-gateway
        terminationGracePeriodSeconds: 30
