ocp-bundle/users-service-deployment-bundle.yaml
apiVersion: v1
kind: List
items:
- apiVersion: v1
  kind: Service
  metadata:
    labels:
      app: users-service-app
    name: users-service-app
    namespace: microservices
  spec:
    ports:    
    - port: 8888
      protocol: TCP
      targetPort: 8888
    selector:
      app: users-service-app
      deploymentconfig: users-service-app
    type: ClusterIP
- apiVersion: route.openshift.io/v1
  kind: Route
  metadata:
    labels:
      app: users-service-app
    name: users-service
    namespace: microservices
  spec:
    to:
      kind: Service
      name: users-service-app
      weight: 100
- apiVersion: apps.openshift.io/v1
  kind: DeploymentConfig
  metadata:
    labels:
      app: users-service-app
    name: users-service-app
    namespace: microservices
  spec:
    replicas: 1
    selector:
      app: users-service-app
      deploymentconfig: users-service-app
    strategy:
      activeDeadlineSeconds: 21600
      resources: {}
      rollingParams:
        intervalSeconds: 1
        maxSurge: 25%
        maxUnavailable: 25%
        timeoutSeconds: 600
        updatePeriodSeconds: 1
      type: Rolling
    template:
      metadata:
        labels:
          app: users-service-app
          deploymentconfig: users-service-app
      spec:
        containers:
        - image: 172.30.1.1:5000/microservices/users-service
          imagePullPolicy: Always
          name: users-service-app
        terminationGracePeriodSeconds: 30
